syntax = "proto3";
option go_package = "/train";

service TrainService {
  rpc GetTrains(TrainsRequest) returns (TrainsReply) {}
  rpc GetTrain(TrainRequest) returns (TrainReply) {}
  rpc GetSeat(SeatRequest) returns (SeatReply) {}
  rpc GetReceipt(ReceiptRequest) returns (ReceiptReply) {}
  rpc ChangeSeat(ChangeSeatRequest) returns (ChangeSeatReply) {}
  rpc CancelSeat(CancelSeatRequest) returns (CancelSeatReply) {}
}

message TrainsRequest {
}

message TrainsReply {
  repeated string trains = 1;
}

message TrainRequest {
  string trainId = 2;
  int32 day = 3;
  int32 month = 4;
  int32 year = 5;
}

message TrainReply {
  message Seat {
    string id = 10;
    string car = 11;
    int32 row = 12;
    string position = 13;
    string status = 14;
    string passengerId = 15;
  }

  string trainId = 5;
  int32 day = 6;
  int32 month = 7;
  int32 year = 8;
  repeated TrainReply.Seat Seats = 9;
}

message SeatRequest {
  string id = 1001;
  string userFirstName = 1002;
  string userLastName = 1003;
  string userEmail = 1004;
  string trainId = 1005;
  string seatValue = 1006;
}

message SeatReply {
  message User {
    string userId = 2301;
    string firstName = 2302;
    string lastName = 2303;
    string emailAddress = 2304;
  }

  string id = 2001;
  string status = 2002;
  string customerId = 2003;
  TrainReply.Seat seat = 2004;
  User user = 2005;
}

message ReceiptRequest {
  string id = 2201;
  string customerId = 2202;
  string seatId = 2203;
}

message ReceiptReply {
  string id = 2305;
  string trainId = 2306;
  TrainReply.Seat seat = 2307;
  string from = 2308;
  string to = 2309;
  float price = 2310;
  SeatReply.User user = 2311;
}

message CancelSeatRequest {
  string id = 3001;
  string customerId = 3002;
  string seatId = 3003;
}

message CancelSeatReply {
  string id = 4001;
  string status = 4002;
}

message ChangeSeatRequest {
  string id = 5001;
  string customerId = 5002;
  string sourceSeat = 5003;
  string destSeat = 5004;
}

message ChangeSeatReply {
  string id = 6001;
  string status = 6002;
  TrainReply.Seat sourceSeat = 6003;
  TrainReply.Seat destSeat = 6004;
}
